--- a/roboshop-infra-standard/01-vpc/Jenkinsfile
+++ b/roboshop-infra-standard/01-vpc/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
         stage('Init') {
             steps {
                 sh'''
-                    cd 01-vpc
+                    cd roboshop-infra-standard/01-vpc
                     ls -ltr
                     pwd
                     terraform init
@@ -20,7 +20,7 @@ pipeline {
                 sh'''
                     ls -ltr
                     pwd
-                    cd 01-vpc
+                    cd roboshop-infra-standard/01-vpc
                     terraform plan
                 '''
             }
@@ -37,7 +37,7 @@ pipeline {
                 sh '''
                     pwd
                     ls -ltr
-                    cd 01-vpc
+                    cd roboshop-infra-standard/01-vpc
                     terraform apply -auto-approve
                 '''
             }
