--- a/roboshop-infra-standard/01-vpc/Jenkinsfile
+++ b/roboshop-infra-standard/01-vpc/Jenkinsfile
@@ -31,14 +31,14 @@ pipeline {
             }
         }
 
-        stage('Destroy') {
+        stage('Apply') {
             steps{
                 
                 sh '''
                     pwd
                     ls -ltr
                     cd roboshop-infra-standard/01-vpc
-                    terraform destroy -auto-approve
+                    terraform apply -auto-approve
                 '''
             }
         }
